# floor-vectorizer

./: Dockerfile  Procfile  README.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run_server.py  vectorize_floor.py
examples/: run_example.sh  sample_mapping.csv
tests/: fixtures.py  test_pipeline.py  test_webapp.py
vectorize_floor/: __init__.py  cli.py  geometry.py  io_utils.py  mapping.py  models.py  ocr.py  pipeline.py  rendering.py  segmentation.py
webapp/: __init__.py  main.py
webapp/static/: style.css
webapp/templates/: base.html  index.html  job.html
