[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floor-vectorizer"
version = "1.0.0"
description = "Vectorize floor-plan images into SVG lots."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Internal tools" }]

[tool.setuptools]
packages = ["vectorize_floor", "webapp"]
include-package-data = true

[tool.setuptools.package-data]
webapp = ["templates/*.html", "static/*.css"]

[project.scripts]
vectorize-floor = "vectorize_floor.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
